--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 style="text-align: center;">CYBER WOLF</h1>
     <h2 style="text-align: center;">aww aww</h2>
     <p>Gwapo ka</p>
-    <img src="images/villa.jpeg" alt="A beautiful image">
+    <img src="villa.jpeg" alt="A beautiful image">
 
 </body>
 </html>
